[AH-A] Fix A11y spacing to follow more AA standart

--- a/src/components/common/Footer/Footer.module.scss
+++ b/src/components/common/Footer/Footer.module.scss
@@ -49,11 +49,11 @@
     flex-flow: wrap;
     justify-content: center;
     align-items: center;
-    margin-top: 6px;
+    margin-top: 3px;
 }
 
 .copyright {
     width: 100%;
-    padding: 6px 0;
+    padding: 4px 0;
     text-align: center;
 }
